--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="./css/styles.css">
+<!--<link rel="stylesheet" href="./css/styles.css">-->
+<link rel="stylesheet" href="./css/styles_2.css">
 <link rel="preload" href="./img/Carrusel_1.png" as="image">
 <link rel="preload" href="./img/Carrusel_2.png" as="image">
 <link rel="preload" href="./img/Carrusel_3.png" as="image">
@@ -10,33 +11,40 @@
   <nav>
     <div class="topnav">
       <!-- Logo and Menu Section -->
-      <div class="logo-menu">
-        <a href="#about">
-          <img src="./img/logo-1.gif" alt="Logo" width="25" height="25">
-        </a>
-        <div class="menu">
-          <a class="active" href="#home">Inicio</a>
-          <a href="#about">Conócenos</a>
-          <a href="#contact">Contacto</a>
+      <div class="topnav-left-section">
+        <div class="logo-menu">
+          <a href="#about">
+            <img src="./img/logo-1.gif" alt="Logo" width="25" height="25">
+          </a>
+          <div class="menu">
+            <a class="active" href="#home">Inicio</a>
+            <a href="#about">Conócenos</a>
+            <a href="#contact">Contacto</a>
+          </div>
         </div>
       </div>
+      
       <!-- Center Section (Image Title and Slogan) -->
       <div class="center-section">
         <h1>
           <a href="#"><img src="./img/psicocodigo.png" alt="Title" height="50"></a>
         </h1>
       </div>
-      <!-- Slogan Section -->
-      <div class="slogan-section">
-        <div class="slogan">
-          <span class="dark-blue-font">Aprende. Crea.&nbsp</span>
-          <span class="soft-blue-font">Innova.</span>
+      <!--Right section-->
+      <div class="topnav-left-section">
+        <!-- Slogan Section -->
+        <div class="slogan-section">
+          <div class="slogan">
+            <span class="dark-blue-font">Aprende. Crea.&nbsp</span>
+            <span class="soft-blue-font">Innova.</span>
+          </div>
+        </div>
+        <!-- Search Box -->
+        <div class="search-box">
+          <input class="search" type="text" placeholder="Buscar..">
         </div>
       </div>
-      <!-- Search Box -->
-      <div class="search-box">
-        <input class="search" type="text" placeholder="Buscar..">
-      </div>
+      
     </div>
   </nav>
 
